// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GDCTrack widget renders gene with just the required model elements 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  data-testid="variant-widget"
>
  <div
    class="MuiPaper-root MuiAccordion-root Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-disabled="false"
      aria-expanded="true"
      class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content Mui-expanded"
      >
        <span
          class="MuiTypography-root MuiTypography-button"
        >
           
          cell adhesion molecu... - protein_coding
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded MuiIconButton-edgeEnd"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-expandIcon-13"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-entered"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="MuiAccordionDetails-root makeStyles-expansionPanelDetails-12"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Core details
              </p>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  Position
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    3:196,596..409,417 
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  Description
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    The protein encoded by this gene is a member of the L1 gene family of neural cell adhesion molecules. It is a neural recognition molecule that may be involved in signal transduction pathways. The deletion of one copy of this gene may be responsible for mental defects in patients with 3p- syndrome. This protein may also play a role in the growth of certain cancers. Alternate splicing results in both coding and non-coding variants. [provided by RefSeq, Nov 2011]
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  Name
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    cell adhesion molecule L1-like
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  Length
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    212,822
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  Type
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    protein_coding
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Attributes
              </p>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  biotype
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    protein_coding
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  geneChromosome
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    3
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  geneEnd
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    409417
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  geneStart
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    196596
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  geneStrand
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    1
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  id
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    R2VuZTpFTlNHMDAwMDAxMzQxMjEjZTQ2MDk1NGM4MmZiMjczYjIwNTk1MDliODFkZTZmYjEj
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  symbol
                </div>
                <div
                  class="makeStyles-fieldValue-17"
                >
                  <div>
                    CHL1
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-14"
              >
                <div
                  class="makeStyles-fieldName-16"
                >
                  synonyms
                </div>
                <div
                  class="makeStyles-fieldSubvalue-18"
                >
                  <div
                    class="makeStyles-fieldValue-17"
                  >
                    <div>
                      CALL
                    </div>
                  </div>
                </div>
                <div
                  class="makeStyles-fieldSubvalue-18"
                >
                  <div
                    class="makeStyles-fieldValue-17"
                  >
                    <div>
                      FLJ44930
                    </div>
                  </div>
                </div>
                <div
                  class="makeStyles-fieldSubvalue-18"
                >
                  <div
                    class="makeStyles-fieldValue-17"
                  >
                    <div>
                      L1CAM2
                    </div>
                  </div>
                </div>
                <div
                  class="makeStyles-fieldSubvalue-18"
                >
                  <div
                    class="makeStyles-fieldValue-17"
                  >
                    <div>
                      MGC132578
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root"
  />
  <hr
    class="MuiDivider-root"
  />
  <hr
    class="MuiDivider-root"
  />
</div>
`;

exports[`GDCTrack widget renders mutation with just the required model elements 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  data-testid="variant-widget"
>
  <div
    class="MuiPaper-root MuiAccordion-root Mui-expanded MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      aria-disabled="false"
      aria-expanded="true"
      class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded"
      role="button"
      tabindex="0"
    >
      <div
        class="MuiAccordionSummary-content Mui-expanded"
      >
        <span
          class="MuiTypography-root MuiTypography-button"
        >
           
          Simple Somatic Mutation
        </span>
      </div>
      <div
        aria-disabled="false"
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon Mui-expanded MuiIconButton-edgeEnd"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-expandIcon-4"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </div>
    <div
      class="MuiCollapse-root MuiCollapse-entered"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="MuiAccordionDetails-root makeStyles-expansionPanelDetails-3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Core details
              </p>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  Position
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    chr3:377,918..377,918 
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  Length
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    1
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  Type
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    Simple Somatic Mutation
                  </div>
                </div>
              </div>
              <hr
                class="MuiDivider-root"
              />
              <p
                class="MuiTypography-root MuiTypography-body1"
              >
                Attributes
              </p>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  chromosome
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    chr3
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  endPosition
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    377918
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  genomicDnaChange
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    chr3:g.377918G&gt;A
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  mutationSubtype
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    Single base substitution
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  mutationType
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    Simple Somatic Mutation
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  ncbiBuild
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    GRCh38
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  referenceAllele
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    G
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  score
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    3
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-field-5"
              >
                <div
                  class="makeStyles-fieldName-7"
                >
                  startPosition
                </div>
                <div
                  class="makeStyles-fieldValue-8"
                >
                  <div>
                    377918
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    class="MuiDivider-root"
  />
  <hr
    class="MuiDivider-root"
  />
  <hr
    class="MuiDivider-root"
  />
</div>
`;
